--- a/WalletAnalyzing/app/src/main/res/layout/listview_item_lent_borrowed.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/listview_item_lent_borrowed.xml
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/background_button_collect_repay"
-            android:text="Repay"
+            android:text="@string/report_Lent_borrow_repay"
             android:textColor="@android:color/white"
             android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceMedium"/>
