--- a/WalletAnalyzing/app/src/main/res/layout/spinner_report_type_dropdown_item.xml
+++ b/WalletAnalyzing/app/src/main/res/layout/spinner_report_type_dropdown_item.xml
@@ -6,16 +6,16 @@
               android:orientation="vertical"
               android:paddingLeft="10dp">
 
-
     <TextView
         android:id="@+id/tvType"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:paddingBottom="5dp"
-        android:paddingTop="10dp"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp"
         android:text="Expense"
         android:textColor="@color/transaction_type_name"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"/>
 
 </LinearLayout>
